test_suite/test_cases/invalid/semanticErr/variables/basicTypeErr11.ast
-- Test: basicTypeErr11.wacc

-- Uploaded file: 
---------------------------------------------------------------
# type mismatch: string <- bool

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  string s = true
end
---------------------------------------------------------------

-- Compiler Output:
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:13 -- Incompatible type at true (expected: CHAR[], actual: BOOL)

